--- a/style.css
+++ b/style.css
@@ -1,5 +1,18 @@
 /*général*/
-
+body
+{
+    font-family: Arial, Helvetica, sans-serif;
+}
+h3
+{
+    color :black; 
+    font-size: 2em;
+    text-align: center;
+}
+h4
+{
+    font-size: 1.7em;
+}
 
 
 /*header*/
@@ -133,4 +146,15 @@ h1
 {
     color: white;
     font-size: 2em;
+}
+
+/*section des différent compte deezer disponnible*/
+.container div 
+{
+    width: 300px;
+    height: 600px;
+    background: #f9f9f9;
+    border:1px #f9f9f9 solid;
+    box-shadow: 3px 2px #f9f9f9 ;
+    text-align: center;
 }
