manque le pofinage des section apres projet fini

--- a/style.css
+++ b/style.css
@@ -291,3 +291,9 @@ footer  li
     margin-left: 40%;
     margin-top: 60px;
 }
+div + img
+{
+    margin-left: 45%;
+    color: white;
+    width: 100px;
+}
