--- a/style.css
+++ b/style.css
@@ -23,8 +23,12 @@ h4
     flex-direction: row;
     align-items:flex-end;
 }
+.menu
+{
+    display: none;
+}
 
-header img
+header + img
 {
     width:150px ;
 }
@@ -154,13 +158,23 @@ h1
     height: 600px;
     background: #f9f9f9;
     border:1px #f9f9f9 solid;
-    box-shadow: 3px 2px #f9f9f9 ;
+    box-shadow: 2px 2px 10px  gray; ;
     text-align: center;
 }
-
+.flex3
+{
+    display:flex;
+    justify-content: center;
+}
+.compte-deezer 
+{
+    margin-right: 20px;
+    box-shadow: 2px 2px  gray;
+}
 .compte-deezer:nth-child(2)
 {
     background:#2d96c8;
+
     
 }
 .check
@@ -196,7 +210,11 @@ ul + a
 }
 
 /* section class info pour les compte de deezer */
-
+.section-info 
+{
+    margin-top:30px ;
+    margin-bottom: 30px;
+}
 .info
 {
     width: 900px;
@@ -209,9 +227,17 @@ ul + a
 .bloc-horizon
 {
     background:rgb(241, 239, 239);
-    height: 105px;
-    
+    display: flex;
+    justify-content: space-around;
+    align-items: center; 
+    margin-bottom: 20px;  
 }
+.div-horizon
+{
+    
+    width: 480px;
+}
+
 h5
 {
     padding-top: 25px;
@@ -227,18 +253,19 @@ h5 + p
 }
 .bouton-abonement
 {
-    margin-left: 51%;
+    
     border-radius: 20px 20px;
     height: 30px;
     width: 160px;
     border: 2px black solid;
     color:black;
-    
-
+    position:relative;
+    left: 50%
 }
+
 .bouton-abonement1
 {
-    margin-left: 40%;
+    
     border-radius: 20px 20px;
     height: 30px;
     width: 160px;
@@ -302,6 +329,7 @@ div + p
     
     width: 100px;
 }
+
 .logo-et-image img 
 {
    
@@ -316,200 +344,118 @@ div + p
     margin:auto auto;
 }
 
-@media(min-width : 600px) 
-{
-    /* general*/
-    
+/*media query*/
+@media all and (min-width: 100px) and (max-width: 800px){
 
-
-    /*header téléphone*/
+    /*header*/
     .flex
     {
+        display:flex;
+        justify-content:center;
         
-        
-        flex-direction: column;
-        align-items:center;
     }
     nav 
     {
-        visibility: hidden;
+        display: none;
     }
-   /*section album*/
-   .téléphone 
-   {
-       height: auto;
-       flex-direction: column;
-       width: auto;
-       
-   }
-
-   /*section deezer c'est quoi */
-   .phone
-    {
-        visibility: hidden;
-        
-    }
-    .gris div
-    {
-        width: auto;
     
-    }
-   
-   .flex2
+    .menu
     {
-           flex-direction: column;
-           font-size: 1.7em;
-           text-align:center;
+        display:initial;
+        margin-left: 30px;
+    }
+    nav 
+    {
+        margin-right: 0px;
+    }
+    /*section vos émotion mérite*/
+    .téléphone 
+    {
+        height:auto;
+        margin-top: 50px;
+        display: flex;
+        flex-direction: column;
+    }
+    .query
+    {
+        text-align: center ;
+    }
+    /*section deezer c'est quoi avec le téléphone qui va disparaitre*/
+    .gris /* cet classe englobe cet section*/
+    {
+        background: #f9f9f9 ;
+        height: auto;
+        flex-direction: column;
+        margin-top: 20px;
+        margin-bottom: 20px;
     }
     .phone
     {
-        height: 0px;
+        display: none;
+        height:0px;
     }
-    .gris
+    /*section a fond rose du site*/
+    .flex2 /*classe qui englobe la section*/
     {
-        padding-top: 0%;
-        height: 900px;
-    }
-
-    /*section fond rose avec icone*/
-    .pink
-    {
+        display:flex;
         flex-direction: column-reverse;
+        align-items:center;
     }
-
-    /* section abonement gratuit prenium etc...*/
-    .container div 
+    /*section profitez de votre musique  et les compte deezer*/
+    .container   /*classe qui englobe la section*/  
     {
-        width: auto;
-        height: auto;
-        background: #f9f9f9;
-        border:1px #f9f9f9 solid;
-        box-shadow: 3px 2px #ddd9d9 ;
-        text-align: center;
-    }
-
-    .compte-deezer:nth-child(2)
+        flex-direction: column; 
+        align-items: center;
+    } 
+    .compte-deezer 
     {
-        background:#2d96c8;
-        margin-top:20px;
-        margin-bottom:20px ;
+        margin-top: 20px;
         
     }
-
-    /*section info des compte deezer*/
+    
+    /*section info*/
     .info
     {
-        width: 400px;
+        width: auto;
         text-align: center;
-        margin-top:50px;
+        padding: auto;
+        
     }
-
-    /*section abonement avec -25% */
-    .bloc-horizon
+    .section-info
     {
-        background:rgb(241, 239, 239);
-        
-        
-    }
+            margin-top: 20px;
+
+     }
+    /* section abonement -25%*/
     
+    .bloc-horizon
+    { 
+        flex-direction: column;
+    }
     h5
     {
-        padding-top: 10px;
-        padding-left: 20px;
-        text-align: center;
-        
-    }
-    h5 + p 
-    {
-       
-        visibility: hidden;
-    }
-    .bouton-abonement
-    {
-        margin-left:px;
-        visibility:visible;
+        text-align: center;  
+        padding-top: 0px;
+        padding-left: 0px;
     
     }
-    .bouton-abonement1
+    h5+p 
     {
-        margin-left:px;
-        border-radius: 20px 20px;
-        height: 30px;
-        width: 160px;
-        border: 2px black solid;
-        color:black;
-        visibility:visible;
+        display: none;
     }
-    .savoir
-    {
-        padding-left: 20px;
-    }
-    span
-    {
-        color: rgb(232, 91, 106);
-    }
-    
+  
     /*footer*/
-
     .flex
     {
-        align-items: flex-start;
-    }
-    h6
-    {
-        color: rgb(121, 119, 119);
-        margin-left: 39px;
-    }
-    .foot
-    {
-        margin-left: 20px;
-        height: 270px;
-        text-align: start;
+        display:flex;
+        justify-content: space-between;
+        flex-direction: column;
+        align-items:flex-start;
+    }   
         
-    }
-    footer  li
-    {
-        color:rgb(182, 177, 177);
-        list-style-type: none;
-    }
     
-    .play-et-store
-    {
-        border: 1px white solid;
-        border-radius: 5px 5px;
-        width:100px ;
-        height:28px ;
-        margin-left: 10px;
-        
-        
-    }
-    .apple
-    {
-        width:100px ;
-        border: 1px white solid;
-        border-radius: 5px 5px;
-        margin-left: 40%;
-        margin-top: 60px;
-    }
-    div + p 
-    {
-        margin-left: 30%;
-        
-        width: 100px;
-    }
-    .logo-et-image img 
-    {
-       
-        margin-left: 45%;
-        color: white;
-        width: 100px;
-        
-    }
-    .foot-logo
-    {
-        height: 20px;
-        margin:auto auto;
-    }
+   
+    
 
+}
 
-}    
