--- a/style.css
+++ b/style.css
@@ -134,7 +134,6 @@ h1
 {
     width: 50px;
     padding-left: 40px;
-    
 }
 .pink
 {
@@ -174,8 +173,6 @@ h1
 .compte-deezer:nth-child(2)
 {
     background:#2d96c8;
-
-    
 }
 .check
 {
@@ -184,7 +181,6 @@ h1
 .no
 {
     list-style-image: url("icon/close.png");
-    
 }
 ul li
 {
@@ -230,30 +226,28 @@ ul + a
     display: flex;
     justify-content: space-around;
     align-items: center; 
-    margin-bottom: 20px;  
+    margin-bottom:10px ;
+    box-shadow: 1px 1px 2px gray ;
 }
 .div-horizon
 {
-    
-    width: 480px;
+    width: 481px;
+    padding-bottom:20px;
 }
 
 h5
 {
     padding-top: 25px;
     padding-left: 20px;
-    
 }
 h5 + p 
 {
     width: auto;
     margin: auto auto;
     padding-left: 20px;
-    
 }
 .bouton-abonement
 {
-    
     border-radius: 20px 20px;
     height: 30px;
     width: 160px;
@@ -265,7 +259,6 @@ h5 + p
 
 .bouton-abonement1
 {
-    
     border-radius: 20px 20px;
     height: 30px;
     width: 160px;
@@ -297,7 +290,6 @@ h6
     margin-left: 20px;
     height: 270px;
     text-align: start;
-    
 }
 footer  li
 {
@@ -312,8 +304,6 @@ footer  li
     width:100px ;
     height:28px ;
     margin-left: 10px;
-    
-    
 }
 .apple
 {
@@ -326,17 +316,30 @@ footer  li
 div + p 
 {
     margin-left: 30%;
-    
     width: 100px;
 }
-
+.flex4
+{
+    display: flex;
+    justify-content: center;
+    justify-content: space-around;
+    align-items: center;
+}
 .logo-et-image img 
 {
-   
-    margin-left: 45%;
-    color: white;
+    width: 30px;
+}
+.logo-et-image2 img 
+{
     width: 100px;
-    
+}
+.deezer-fin
+{
+    color: rgb(121, 119, 119);
+}
+.span1
+{
+    color:rgb(182, 177, 177);
 }
 .foot-logo
 {
@@ -352,7 +355,6 @@ div + p
     {
         display:flex;
         justify-content:center;
-        
     }
     nav 
     {
@@ -410,7 +412,6 @@ div + p
     .compte-deezer 
     {
         margin-top: 20px;
-        
     }
     
     /*section info*/
@@ -419,7 +420,6 @@ div + p
         width: auto;
         text-align: center;
         padding: auto;
-        
     }
     .section-info
     {
@@ -437,7 +437,6 @@ div + p
         text-align: center;  
         padding-top: 0px;
         padding-left: 0px;
-    
     }
     h5+p 
     {
@@ -445,16 +444,31 @@ div + p
     }
   
     /*footer*/
-    .flex
+    
+    .flex2
     {
         display:flex;
         justify-content: space-between;
         flex-direction: column;
         align-items:flex-start;
     }   
-        
+    /* parti des logo du footer*/
+    .flex4
+    {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
     
-   
+    
+    .foot-logo
+    {
+        margin-top:10px;
+        height: 20px;
+        width: 20px;
+    }
+    
     
 
 }
